# retrogress

./: .gitignore  Brewfile  CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
.github/workflows/: pipeline.yml
examples/: parallel.rs  sync.rs
src/: error.rs  lib.rs
src/parallel/: mod.rs
src/progress/: mod.rs
src/render/: mod.rs
src/sync/: mod.rs
tests/: integration_tests.rs
